--- a/arch/arm64/configs/selene_defconfig
+++ b/arch/arm64/configs/selene_defconfig
@@ -497,3 +497,4 @@ CONFIG_INCREMENTAL_FS=y
 #K19A code for HQ-132901 by qianxiaoming at 20210513 end
 CONFIG_WLAN_DRV_BUILD_IN=y
 # CONFIG_PRINTK_MT_PREFIX is not set
+CONFIG_MTK_SYSTRACKER_V2=n
