drivers/: touchscreen: Add an interface to expose TP features to user…
…space

* Needs to implement and register ops from TP driver
 * Access them via /sys/touchpanel/*
 * Export capacitive keys status

--- a/arch/arm64/configs/selene_defconfig
+++ b/arch/arm64/configs/selene_defconfig
@@ -269,6 +269,7 @@ CONFIG_FPC_FINGERPRINT=y
 CONFIG_INPUT_TOUCHSCREEN=y
 #K19A code for HQ-131648 by feiwen at 2021.4.27 start
 #K19A code for HQ-131648 by feiwen at 2021.4.27 end
+CONFIG_TOUCHSCREEN_COMMON=y
 CONFIG_TOUCHSCREEN_MTK=y
 CONFIG_TOUCHSCREEN_NT36672C=y
 # Huaqin add for HQ-147450 by feiwen at 2021/7/23 start
