--- a/arch/arm64/configs/selene_defconfig
+++ b/arch/arm64/configs/selene_defconfig
@@ -267,6 +267,7 @@ CONFIG_GOODIX_FINGERPRINT=y
 CONFIG_FPC_FINGERPRINT=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_THUNDERQUAKE_ENGINE_GPL=y
 #K19A code for HQ-131648 by feiwen at 2021.4.27 start
 #K19A code for HQ-131648 by feiwen at 2021.4.27 end
 CONFIG_TOUCHSCREEN_COMMON=y
